v0.1/05_HTML輸出欄位規則.md
# HTML 輸出欄位規則

## HTML 固定區塊

HTML 必須包含下列內容，並以頁籤點選方式呈現，不採一頁連續下滑作為主要閱讀方式：
1. 頁首標題與使用提醒
2. 摘要總覽
3. 全案 Dashboard
4. 專案基本資訊
5. 智慧建築標章規定
6. 智慧建築對應矩陣
7. 弱電系統總覽表
8. 弱電需求樹狀圖 / 心智圖
9. 依系統展開弱電需求細節
10. 機電設備規格總覽表
11. 依系統展開設備規格細節
12. 基本待辦與釐清清單
13. 弱電相關審查意見問題 / 回覆對照
14. 頁尾聲明

## 頁籤分組

頁首標題與使用提醒固定在頁面最上方，不放入頁籤。

主要內容必須分為下列頁籤：

| 頁籤 | 包含區塊 |
|---|---|
| 摘要總覽 | 分析結果總摘要、各系統摘要卡、優先閱讀順序、關鍵待確認 |
| 1-2 專案總覽 | 全案 Dashboard、專案基本資訊 |
| 3-4 智慧建築 | 智慧建築標章規定、智慧建築對應矩陣 |
| 弱電總覽 | 弱電系統總覽表 |
| 6 需求樹 | 弱電需求樹狀圖 / 心智圖 |
| 7 系統細節 | 依系統展開弱電需求細節 |
| 8 設備總覽 | 機電設備規格總覽表 |
| 9 設備細節 | 依系統展開設備規格細節 |
| 10 待辦釐清 | 基本待辦與釐清清單 |
| 11 審查意見 | 弱電相關審查意見問題 / 回覆對照 |

頁尾聲明固定在頁面底部，不放入頁籤。

頁籤互動要求：
- 預設開啟「摘要總覽」。
- 頁籤按鈕需可水平捲動，避免手機版擠壓。
- 點擊總覽表中的「查看細節」連結時，若目標 details 在其他頁籤，必須先切換到該頁籤。
- 不可依賴外部 JavaScript 或 CSS 套件。
- 若未提供審查意見書，仍保留「11 審查意見」頁籤，並標示「未提供審查意見書」。

## 頁首標題與使用提醒

應包含：
- 專案名稱
- 文件來源或檔名
- 產出日期
- 使用提醒：本 HTML 為需求轉譯與檢核圖譜，不作為正式設計、報價、合約責任或智慧建築得分判斷。

## 摘要總覽欄位

摘要總覽是 HTML 的第一閱讀入口，用於整理「本次已分析出的弱電需求結果」，不是統需書全文摘要，也不是重新摘要原始 PDF。

必須包含：

- 全案弱電重點摘要：依重要性精簡條列本案弱電設計、估算、繪圖最需要先理解的結論；有重要結論就列，沒有就不要硬補。
- 系統摘要卡：每個已辨識的弱電系統一張卡或一列表格，包含系統名稱、主要需求、來源頁碼、審查意見影響、責任界面狀態、優先級。
- 優先閱讀順序：指出使用者應先看哪些系統、哪些待確認事項、哪些審查意見。
- 關鍵待確認：只列高影響項目，例如責任界面不明、規格矛盾、數量或空間條件不足、審查回覆無法追溯。
- 圖表或矩陣：只有在能降低閱讀負擔時才加入，例如系統優先級矩陣、待確認類型統計、責任界面矩陣、審查意見影響表。

摘要總覽禁止：

- 不得把統需書章節逐段摘要後堆疊。
- 不得列出所有設備規格明細。
- 不得列出非弱電系統明細。
- 不得把智慧建築條文全文放入摘要。
- 不得取代後續 details 的來源追溯。

## Dashboard 欄位

- 涉及弱電系統數
- 智慧建築可能關聯數
- 需人工確認事項數
- 機電設備規格項目數
- 智慧建築目標
- 整體釐清風險

## 專案基本資訊欄位

| 欄位 | 說明 |
|---|---|
| 專案名稱 | 從需求書封面、章節標題或文件資訊擷取 |
| 業主 / 主辦機關 | 若未明確列出，標示需人工確認 |
| 統包 / 設計施工範圍 | 擷取與弱電、機電、智慧建築相關的範圍 |
| 建築用途 | 影響智慧建築、消防、弱電空間需求 |
| 樓層 / 區域 | 用於判斷設備配置與需求範圍 |
| 智慧建築目標 | 只摘錄需求書明示的標章、候選證書、等級或版本要求 |
| 文件來源頁碼 | 保留來源頁碼或標示待確認 |

## 智慧建築標章規定欄位

| 欄位 | 說明 |
|---|---|
| 來源頁碼 | 需求書頁碼 |
| 短原文摘錄 | 不超過必要短句 |
| 轉譯後要求 | 將合約/業主語言轉成工程可讀需求 |
| 手冊版本 | 例如智慧建築評估手冊 2024 年版；不明則標示需確認 |
| 標章階段 | 候選智慧建築證書、智慧建築標章或未明 |
| 可能對應指標 | 基礎設施、維運管理、安全防災、節能管理、健康舒適、智慧創新 |
| 禁止判斷 | 不得判定可得分、已符合或正式通過 |

## 智慧建築對應矩陣欄位

- 可能對應指標
- 是否涉及
- 可能對應系統
- 可能需要佐證
- 需人工確認

## 弱電系統總覽表欄位

- 系統
- 需求重點
- 主要圖說 / 文件
- 智慧建築關聯
- 主要待確認
- 優先級
- 查看細節

## 弱電系統總覽表導覽規則

弱電系統總覽表是閱讀導覽，不是統計報表。不得只輸出關鍵需求數與需確認數。

數字處理：
- 需求數與需確認數可以保留，但不得作為主要欄位。
- 數字只能放在「系統」欄位內作為 mini-count 標籤。
- 每個數字必須能在後方細節區找到對應內容。
- 不可出現無法追溯的統計數字。
- 不可只輸出數字而不提供需求重點。

系統欄位格式：

```html
<strong>中央監控 / 建築管理系統</strong><br>
<span class="mini-count">需求 18</span>
<span class="mini-count danger">待確認 8</span>
```

需求重點欄位：
- 需以 3 到 5 個短標籤呈現該系統核心需求。
- 標籤應使用 `.chip` 樣式。
- 標籤內容應來自後方細節區，不可無來源。

主要待確認欄位：
- 只列 1 到 3 個最重要的問題。
- 優先列出會影響系統架構、設備選型、整合介面、連動邏輯或智慧建築申請的事項。

查看細節欄位：
- 每個系統都要有「查看細節」連結。
- 連結必須指向後方該系統的 `details` 區塊。
- 查看細節連結不可連到不存在的 id。

建議系統 id：

| 系統 | id |
|---|---|
| 電話系統 | system-phone |
| 資訊網路系統 | system-lan |
| 監視系統 | system-cctv |
| 門禁系統 | system-access |
| 中央監控 / 建築管理系統 | system-bms |
| 能源管理系統 | system-ems |
| 停車管理系統 | system-parking |
| 室內空氣品質 / IAQ | system-iaq |
| 對講系統 | system-intercom |
| 廣播系統 | system-pa |
| 公共資訊多媒體系統 | system-display |
| 火警連動 | system-fire |
| 電梯連動 | system-elevator |
| 照明控制 | system-lighting |
| 給排水監控 | system-water |
| 公眾通信涵蓋 | system-mobile |

弱電系統總覽表 HTML 欄位：

```html
<table>
  <tr>
    <th>系統</th>
    <th>需求重點</th>
    <th>主要圖說 / 文件</th>
    <th>智慧建築關聯</th>
    <th>主要待確認</th>
    <th>優先級</th>
    <th>查看細節</th>
  </tr>
  {{弱電系統導覽列}}
</table>
```

每列格式：

```html
<tr>
  <td>
    <strong>{{系統名稱}}</strong><br>
    <span class="mini-count">需求 {{需求數}}</span>
    <span class="mini-count danger">待確認 {{待確認數}}</span>
  </td>
  <td>{{需求重點chips}}</td>
  <td>{{主要圖說文件}}</td>
  <td>{{智慧建築關聯tags}}</td>
  <td>{{主要待確認}}</td>
  <td>{{優先級tag}}</td>
  <td><a href="#{{系統id}}">查看細節</a></td>
</tr>
```

需求重點範例：

| 系統 | 需求重點 |
|---|---|
| 電話系統 | PBX、電信引進、電話插座、電梯對講、公共電話預留 |
| 資訊網路系統 | MDF / IDF、交換器、Cat.6、光纖主幹、Wi-Fi / 防火牆 |
| 中央監控 / 建築管理系統 | BMS 平台、DDC / PLC、I/O 點表、圖控畫面、連動矩陣 |
| 監視系統 | 攝影機、NVR / VMS、24 小時錄影、影像連動、儲存容量 |
| 門禁系統 | 讀卡機、門禁控制器、消防釋放、電梯樓層管制、權限管理 |
| 停車管理系統 | 車牌辨識、柵欄機、自動繳費、車位偵測、充電車位管理 |

## 弱電需求樹狀圖 / 心智圖欄位

樹狀圖至少包含：

- 第一層：需求大類
- 第二層：系統分類
- 第三層：子系統 / 空間 / 設備群
- 第四層：具體需求節點
- 第五層：來源頁碼 / 需確認 / 智慧建築關聯 / 圖說需求

HTML 中樹狀圖不得只列系統名稱，必須列出具體需求。

HTML 中樹狀圖不得做成「第一層一欄、第二層一欄、第三層一欄、第四層一欄」的橫向分欄表。這種版型會讓使用者無法看出哪個具體需求屬於哪個子系統。

樹狀圖應採 `demand_map (4).html` 的「可折疊系統卡片 + 縮排分支」：

1. 每一張卡片代表一個系統分類，例如電話 / 電信系統、資訊網路 / 綜合佈線、中央監控、門禁、停車管理。
2. 卡片標題列顯示系統名稱與需求筆數。
3. 卡片內用子系統 / 空間 / 設備群作為分支標籤，例如 PBX 銜接、MDF / IDF、Cat.6 與光纖、網管交換器。
4. 每個分支底下列出已分析出的弱電相關具體需求摘要；有就列出，沒有明確需求就不要建立空分支。
5. 來源頁碼、智慧建築可能關聯、需人工確認、責任界面待確認等資訊，放在需求摘要下方的標籤列，不要變成獨立欄位。
6. 若特殊空間需求跨多個系統，應另外建立「特殊空間需求」卡片或在相關系統卡片內標示空間分支，不得把特殊空間孤立成無法追溯的欄位。

建議 HTML 結構：

```html
<details class="tree-system" open>
  <summary><span class="tree-node level-2">電話 / 電信系統</span><span class="mini-count">5 筆</span></summary>
  <ul class="tree-list">
    <li>
      <span class="tree-node level-3">PBX 銜接</span>
      <ul>
        <li>
          <span class="tree-node level-4">規劃電話引進、PBX 銜接、各層配線及使用端電話服務；容量須由法規與使用訪談確認。</span>
          <ul>
            <li><span class="tree-node level-5"><span class="chip tiny">p.139–140｜5.3.2 一</span> <span class="chip tiny">智慧建築可能關聯：基礎設施</span> <span class="chip tiny">需人工確認</span></span></li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</details>
```

若內容過多，可以使用以下方式：
1. 先依弱電系統分組，讓使用者能直接定位到電話、資訊網路、中央監控、CCTV、門禁、停車管理等系統。
2. 每個系統列出已分析出的弱電相關具體需求；不得設固定筆數上限。
3. 沒有明確需求的系統不要建立空節點，也不要硬湊分類。
4. 過長原文、完整審查問答與設備規格全文放入後續 details 區塊，不要塞進樹狀圖。
5. 不可只輸出籠統群組。

建議樹狀圖節點：
- 需求大類：弱電需求、特殊空間需求、智慧建築標章規定、機電設備規格需求說明表、跨系統整合需求、需人工確認事項
- 系統分類：電話系統、資訊系統、數位電視天線系統、中央監控系統、監視系統、門禁管制系統、停車管理、視聽音響、空調 / IAQ、消防 / 電梯 / 照明 / 給排水連動
- 子系統 / 空間 / 設備群：PBX、MDF / IDF、交換器、強波器 / 放大器、電力系統、給排水系統、攝影機、NVR / VMS、讀卡機、車牌辨識、B1F、1F、各樓層、重要機房
- 具體需求節點：原文可轉譯出的可讀工程需求，例如「各單位辦公室及服務空間設置電話插座」、「中央監控需納入電力、給排水、電梯、消防、照明、空調、門禁、緊急求救與監視系統」
- 補充標籤：來源頁碼、需人工確認、智慧建築可能關聯、可能需要圖說、介面 / 協定、整合需求

## 弱電系統細節欄位

弱電系統細節區是可回查內容，不是代表性摘要。凡需求書中已抽出的弱電、中央監控、能源管理、智慧建築或跨系統整合相關需求，都應保留在對應 details 區塊；總覽表與樹狀圖可以摘要，但 details 不可任意抽樣。

- 系統名稱
- 來源頁碼
- 短原文摘錄
- 轉譯後需求
- 設計重點
- 可能需要的圖說或文件
- 智慧建築可能關聯
- 需人工確認事項

## 機電設備規格總覽表欄位

- 系統
- 設備數
- 關鍵設備
- 整合需求
- 智慧建築關聯
- 需確認數

## 設備規格細節欄位

設備規格細節區不得只列代表設備。凡需求書中與弱電、中央監控、能源管理、智慧建築或系統整合相關的設備，都應逐筆列出；設備總覽可以聚合，設備細節不可任意抽樣。

- 設備名稱
- 所屬系統
- 來源頁碼
- 短原文摘錄
- 規格重點
- 功能要求
- 介面或協定
- 整合需求
- 可能需要的圖說或文件
- 智慧建築可能關聯
- 需人工確認事項

## 需人工確認清單欄位

- 對應區塊
- 來源頁碼
- 需確認事項
- 為什麼需要確認
- 建議確認對象
- 優先級

## 基本待辦與釐清清單欄位

此區塊是給人員快速安排查核與溝通用，不是正式 RFI、CAD 任務表或報價前置表。

必須包含：
- 待辦項目
- 對應系統或區塊
- 來源頁碼或來源章節
- 為什麼需要確認
- 建議確認對象
- 優先級
- 建議下一步

## 審查意見整合欄位

此區塊只呈現弱電、中央監控、能源管理、智慧建築弱電佐證或跨系統介面相關的審查意見。非弱電相關意見不逐筆輸出。

必須包含：
- 編號或原表序號
- 來源文件名稱
- 來源頁碼或章節
- 審查委員或提出單位
- 審查階段或日期
- 問題 / 審查意見短摘錄
- 回覆 / 處理情形短摘錄
- 關聯弱電系統
- 與統需書的關係：補充、修正、衝突、追蹤、僅提醒
- 對 HTML 需求圖譜的影響
- 是否需要人工確認
- 建議確認對象
- 對應系統 details anchor

若審查意見與統需書矛盾，必須在此區塊標示矛盾，並同步加入「10 待辦釐清」。

## HTML 呈現規則

| 區塊 | 呈現方式 | 注意事項 |
|---|---|---|
| 頁籤列 | sticky tab bar | 讓使用者點選主要區塊，不以長頁下滑為主 |
| Dashboard | 卡片或統計列 | 只統計擷取結果，不推論正式符合性 |
| 智慧建築矩陣 | 表格 | 「是否涉及」可用是、可能、未見明確要求 |
| 弱電總覽 | 表格 | 以系統為列，避免逐句堆疊 |
| 弱電需求樹 | 樹狀圖或心智圖 | 用於快速理解需求結構 |
| 系統細節 | 可折疊區塊 | 每筆需求保留來源頁碼與短摘錄 |
| 設備規格總覽 | 表格 | 聚合設備類型與整合需求 |
| 設備規格細節 | 可折疊區塊 | 不全文複製規格 |
| 基本待辦與釐清清單 | 表格 | 高優先列在前面，用於人工查核與溝通 |
| 審查意見 | 表格或折疊卡片 | 只列弱電相關問題與回覆；非弱電不列明細 |

## 頁尾聲明

頁尾必須提醒：
- 本 HTML 僅供需求整理與設計前置溝通。
- 智慧建築僅為可能對應，不代表符合、得分或通過。
- 審查意見回覆僅供追蹤，不代表 GPT 判定已完成修正。
- 設備數量、位置、品牌型號、線路路徑、施工責任與合約責任需由人工確認。
- BIM 任務不在本 GPT 預設輸出範圍。

## HTML 檔案輸出規則

- 預設輸出應產生可下載的 `.html` 檔案，而不是只貼 HTML 原始碼。
- 若具備檔案產生能力，請將 HTML 內容寫入 `demand_map.html`。
- 完成後提供 `demand_map.html` 的下載或開啟連結。
- 只有使用者明確要求系統匯入或後續自動化串接時，才另外輸出 CSV / JSON。
- 除非使用者要求查看原始碼，否則不要預設貼出完整 HTML code block。

## MD 旁支檔案輸出規則

除 `demand_map.html` 外，預設同步輸出：

- `to_xmind.md`：可編輯弱電系統樹狀圖，方便貼入 XMind 或心智圖工具後人工調整；不得寫成完整報告或全量資料表。
- `todo_handoff.md`：弱電案件 AI 交接報告，方便後續 AI 或人工查核接續處理。

兩份 MD 檔的詳細格式依 `10_MD旁支輸出規則.md` 執行。

若 GPTS 無法穩定產生多個可下載檔案，應先提供 `demand_map.html`，再以兩個 fenced Markdown code block 分別提供 `to_xmind.md` 與 `todo_handoff.md` 內容。

`to_xmind.md` 與 `todo_handoff.md` 仍屬模組一輔助交付，不可寫成正式 RFI、正式責任分工、正式報價數量、CAD 任務表、M2 / M4 mapping 或 M1.5 結構化資料包。
